--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="heading">
                 <i class="fa-solid fa-chevron-left"></i>
                 <div class="user-name">
-                    <img src="/images/avatar.jpg" alt="user-avatar here">
+                    <img src="./images/avatar.jpg" alt="user-avatar here">
                     <div class="user-name-heading">
                         <h5>Samuel Green</h5>
                         <p>Availabel to Walk</p>
